Fixed chips position on mobile

--- a/atoms/project/index.module.scss
+++ b/atoms/project/index.module.scss
@@ -160,7 +160,9 @@
   justify-content: center;
   width: 100%;
   align-self: baseline;
-  margin-top: -5vh;
+  @media screen and (min-width: 768px) {
+    margin-top: -5vh;
+  }
 }
 
 .chips {
